# mtet

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  pyproject.toml
.github/workflow/: build.yml
.github/workflows/: build.yml
cmake/: catch2.cmake  indirect-value-lite.cmake  nanobind.cmake  nanothread.cmake  slot_map.cmake  span-lite.cmake  strong_type.cmake  value-ptr-lite.cmake
examples/: longest_edge_split.cpp
include/mtet/: io.h  mtet.h
python/: pymtet.cpp
python/mtet/: __init__.py
python/tests/: test_mtet.py
src/: MTetMeshImpl.h  io.cpp  mtet.cpp
tests/: test_internal.cpp  test_mtet.cpp
