[build-system]
requires = [
    "scikit-build-core==0.9.8",
]
build-backend = "scikit_build_core.build"

[project]
name = "mtet"
maintainers = [{name = "Qingnan Zhou", email = "qnzhou@gmail.com"}]
description = "A mini tetrahedral mesh library."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

[tool.scikit-build]
install.components = ["MTet_Python_Runtime"]
wheel.packages = ["python/mtet"]
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
MTET_BUILD_PYTHON_BINDING = true

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "python/mtet/__init__.py"
